--- a/login.html
+++ b/login.html
@@ -1,46 +1,221 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>WeCare</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 <head>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
     <link rel="stylesheet" href="./styles.css">
-    <!------ Include the above in your HEAD tag ---------->
 </head>
 
 <body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
+    <nav class="navbar bg-light navbar-expand-lg">
         <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="#" class="text-info">Register here</a>
-                            </div>
-                        </form>
-                    </div>
+          <a class="navbar-brand first-half" href="#">
+            <img class="logo" src="./images/we-care-logo.png" alt="Bootstrap" width="100" height="50">
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle navfont" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item navfont" href="#">Action</a></li>
+                      <li><a class="dropdown-item navfont" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item navfont" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
                 </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+          <div class="collapse navbar-collapse po nav-opts" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto ">
+                
+              <li class="nav-item">
+                  <a class="nav-link navfont" aria-current="page" href="#">Home</a>
+            </li>
+              <li class="nav-item">
+                <a class="nav-link navfont"  aria-current="page" href="./login.html">Medicines</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link navfont" aria-current="page" href="./login.html">Sign up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link navfont active" aria-current="page" href="./login.html">Log in</a>
+              </li>
+              <li class="nav-item">
+                <button class="button-70" role="button"><a href="" class="nav-link navfont buttontext"><span class="material-symbols-outlined icon">
+                    shopping_cart
+                    </span>Cart</a></button>
+              </li>
+            </ul>
+        
+        </div>
+      </nav>
+    <div class="form" style="margin-bottom:5rem ;">
+        <div class="form-toggle"></div>
+        <div class="form-panel one">
+            <div class="form-header">
+                <h1>Account Login</h1>
+            </div>
+            <div class="form-content">
+                <form>
+                    <div class="form-group"><label for="username">Username</label><input type="text" id="username" name="username" required="required" /></div>
+                    <div class="form-group"><label for="password">Password</label><input type="password" id="password" name="password" required="required" /></div>
+                    <div class="form-group"><label class="form-remember"><input type="checkbox" />Remember Me</label><a class="form-recovery" href="#">Forgot Password?</a></div>
+                    <div class="form-group"><button type="submit">Log In</button></div>
+                </form>
+            </div>
+        </div>
+        <div class="form-panel two">
+            <div class="form-header">
+                <h1>Register Account</h1>
+            </div>
+            <div class="form-content">
+                <form>
+                    <div class="form-group"><label for="username">Username</label><input type="text" id="username" name="username" required="required" /></div>
+                    <div class="form-group"><label for="password">Password</label><input type="password" id="password" name="password" required="required" /></div>
+                    <div class="form-group"><label for="cpassword">Confirm Password</label><input type="password" id="cpassword" name="cpassword" required="required" /></div>
+                    <div class="form-group"><label for="email">Email Address</label><input type="email" id="email" name="email" required="required" /></div>
+                    <div class="form-group"><button type="submit">Register</button></div>
+                </form>
             </div>
         </div>
     </div>
-
-
-
+   
+    <div id="bot3">
+        <div id="b3first">
+          <div id="feat">
+            <div>
+              <h4>Company</h4>
+              <p>Careers</p>
+              <p>Blogs</p>
+              <p>Partner with PharmEasy</p>
+              <h4>Our Services</h4>
+              <p>Order Medicine</p>
+              <p>Healthcare Products</p>
+              <p>Diagnostic Tests</p>
+            </div>
+            <div>
+              <h4>Featured Categories</h4>
+              <p>Covid Essentials</p>
+              <p>Devices</p>
+              <p>Nutriyion and Fitness Suppliments</p>
+              <p>Personal Care</p>
+              <p>Ayurvedic Care</p>
+              <p>Baby and Mom care</p>
+              <p>Skin Care</p>
+              <p>Diabetic Care</p>
+              <p>Short term Ailments</p>
+              <p>Lifestyle Ailments</p>
+              <p>Home Care</p>
+              <p>Women Care</p>
+              <p>Health Food and Drinks</p>
+              <p>Ortho Care</p>
+            </div>
+            <div>
+              <h4>Need Help</h4>
+              <p>Browse All Medicines</p>
+              <p>Browse All Molecules</p>
+              <p>FAQs</p>
+              <h4>Policy Info</h4>
+              <p>Editorial Policy</p>
+              <p>Privacy Policy</p>
+              <p>Vulnerability Disclosure Policy</p>
+              <p>Terms and condition</p>
+              <p>Customer Support Policy</p>
+              <p>Return Policy</p>
+            </div>
+          </div>
+          <div id="social">
+            <h4>FOLLOW US</h4>
+            <img
+              src="./images/640px-Instagram_icon.png"
+              alt="insta"
+            /><img
+              src="./images/Facebook_Logo_(2019).png"
+              alt="fb"
+            /><img
+              src="./images/youtube_PNG102349.png"
+              alt="YT"
+            /><img
+              src="./images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png"
+              alt="twit"
+            />
+          </div>
+        </div>
+        <div id="b3sec">
+          <div id="pay">
+            <h4>Our Payment Partners</h4>
+            <span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/af0c6812.svg"
+                alt=""
+            /></span>
+            <span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/0e010044.svg"
+                alt=""
+            /></span>
+            <span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/1066bb1f.svg"
+                alt=""
+            /></span>
+            <span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/fbea1701.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/3a1a533d.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/4733a49d.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/b278e536.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/0aca2077.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/44a51ca5.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/d058b00d.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/e9445364.svg"
+                alt="" /></span
+            ><span
+              ><img
+                src="https://assets.pharmeasy.in/web-assets/dist/6e09c713.svg"
+                alt=""
+            /></span>
+          </div>
+          <div id="copy">© 2022 WeCare. All Rights Reserved</div>
+        </div>
+      </div>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
